--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bc5e1a85",
+   "id": "d54ac6b0",
    "metadata": {},
    "source": [
     "# Data Science Tools and Ecosystem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "355b43c4",
+   "id": "5ddaba31",
    "metadata": {},
    "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
@@ -18,71 +18,68 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d5548a2",
+   "id": "2f39a1a0",
    "metadata": {},
    "source": [
     "**Objectives**\n",
+    "\n",
+    "list of popular tools used by Data Science\n",
+    "- Ruby\n",
     "- Java\n",
-    "- Julia\n",
     "- Python\n",
     "- C++\n",
-    "- SQL"
+    "- SQL\n",
+    "- Julia"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9d9379bf",
+   "id": "650121e8",
    "metadata": {},
    "source": [
-    "Some of the popular languages that Data Sciencetist uses are.\n",
+    "Some of the popular languages that Data Scientist use are:\n",
     "1. Python\n",
     "2. Java\n",
-    "3. C++    \n",
-    "4. Ruby\n",
-    "5. Julia\n",
-    "6. SQL"
+    "3. SQL\n",
+    "4. C++"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c76b60a",
+   "id": "9cdcdc8c",
    "metadata": {},
    "source": [
-    "Commonly used Libraries used by Data Sciencetist include:\n",
+    "Some of the commonly used libraries used by Data Scientists include:\n",
     "1. Pandas\n",
     "2. Numpy\n",
-    "3. Scipy\n",
-    "4. Pytorch\n",
-    "5. Tensorflow\n",
-    "6. Seaborn\n",
-    "7. Scikit-learn\n",
-    "8. Scrapy\n",
-    "9. Matplotlib\n",
-    "10. Plotly"
+    "3. Pytorch\n",
+    "4. Tensorflow\n",
+    "5. Scipy\n",
+    "6. Plotly"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a6d98f30",
+   "id": "1d814969",
    "metadata": {},
    "source": [
-    "|Data Science Tools |           |           |        |     \n",
-    "|-------------------|----------|-----------------|-----------\n",
-    "|Rstudio |   Apache Spark | Hadoop |"
+    "| Data Science Tools |         |          |            |\n",
+    "|--------------------|---------|----------|------------|\n",
+    "| Hadoop   | Rstudio | Jupyter Notebook  | Apache Spark|"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bd637233",
+   "id": "1b523373",
    "metadata": {},
    "source": [
-    "### Below are a few examples of evaluating arithmetics expressions in python"
+    "### Below are few examples of evaluating arithmetics expressions in Python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a0e6d94b",
+   "id": "56ad5de9",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4e3fe566",
+   "id": "fd3a6d40",
    "metadata": {},
    "outputs": [
     {
@@ -118,39 +115,23 @@
     }
    ],
    "source": [
-    "# we use division operation to convert minutes to hour i.e xminutes/60\n",
+    "# We use a division operator in converting 200 minute to hours by dividing 200 by 60\n",
     "200/60"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c6499894",
+   "id": "0753f636",
    "metadata": {},
    "source": [
-    "## Author\n",
-    "Kunle Adeyemi"
+    "## Author.\n",
+    "KUNLE ADEYEMI"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e8c9ea4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b98bab5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e89f2bf9",
+   "id": "b5015ead",
    "metadata": {},
    "outputs": [],
    "source": []
